# build123d-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: README.md  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: cad-release.yml  lint-and-test.yml
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/: part1.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/utils/: viewer.py
